kubernetes/case-6-netpol/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-dp
  namespace: gs2e-training
spec:
  selector:
    matchLabels:
      app: node
      env: dev
      tier: back
  replicas: 3
  template:
    metadata:
      labels:
        app: node
        env: dev
        tier: back
    spec:
      containers:
        - name: node
          image: basska/node-app:v2
          volumeMounts:
            - name: app-storage
              mountPath: /data
      volumes:
        - name: app-storage
          hostPath:
            path: /data/gs2e-vol
