kubernetes/case-6-netpol/pod-front.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-app-front
  namespace: gs2e-training
  labels:
    app: node
    env: dev
    tier: front
spec:
  containers:
  - name: node
    image: basska/node-app:v1
    command: ["node", "server-front.js"]
