kubernetes/case-6-netpol/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service-front
  namespace: gs2e-training
  labels:
    app: node-app
spec:
  ports:
    - port: 80
      targetPort: 8081
      name: web
  selector:
    app: node
    env: dev
    tier: front
