kubernetes/case-6-netpol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: gs2e-training
  labels:
    app: node-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: web
  selector:
    app: node
    env: dev
    tier: back
