kubernetes/case-6-netpol/block-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: node-app-netpol
  namespace: gs2e-training
spec:
  podSelector:
    matchLabels:
      tier: back
  policyTypes:
  - Ingress
  ingress:
  - from:
    podSelector:
      matchLabels:
        tier: front
